--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="https://www.youtube.com/@facebookvideoediting1307" target="_blank">YouTube</a>
         <a href="https://www.facebook.com/khusdil.alam.526" target="_blank">Facebook</a>
         <a href="https://wa.me/qr/P3SHRXNHFM57N1" target="_blank">Whatsapp</a>
+        <a href="" target="_blank">Whatsapp Scanner</a>
     </div>
 
     <div class="hamburger" onclick="openNav()">☰</div>
